added picture of shape function

--- a/definitions.tex
+++ b/definitions.tex
@@ -30,9 +30,14 @@ In Plantage there are two different types of groups. One type contains only grou
 \end{figure}
 
 \section{Shapefunction}
-A shape function is basically a list of possible layouts for a given circuit. This list is called shapefunction, because the minimum possible area for these placements is a hyperbolic function and the placements are located near to this so called pareto front.
+A shape function is basically a list of possible layouts for a given circuit. This list is called shapefunction [\ref{fig:shapefunction}], because the minimum possible area for these placements is a hyperbolic function and the placements are located near to this so called pareto front.
 
-PICTURE MISSING SHAPEFUNCTION
+\begin{figure}
+	\centering
+	\includegraphics[scale=1.8]{FIG/shapefunction.png}
+	\caption{shapefunction with possible placements for a miller amplifier}
+	\label{fig:shapefunction}
+\end{figure}
 
 \subsection{Shape}
 A shape is the layout for a certain couple of modules. On the one hand it is used for the layout of the whole circuit, but on the other hand also for the layout of only circuit parts.
