improved size of pictures for groups

--- a/definitions.tex
+++ b/definitions.tex
@@ -17,14 +17,14 @@ In Plantage there are two different types of groups. One type contains only grou
 
 \begin{figure}
 	\centering
-	\input{FIG/group_of_modules.svg}
+	\includegraphics[scale=0.5]{FIG/group_of_modules.png}
 	\caption{group of single modules}
 	\label{fig:group_of_modules}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\input{FIG/group_of_groups.svg}
+	\includegraphics[scale=0.5]{FIG/group_of_groups.png}
 	\caption{group of two groups}
 	\label{fig:group_of_groups}
 \end{figure}
