--- a/placement.tex
+++ b/placement.tex
@@ -1,10 +1,15 @@
 \chapter{Placement}
-The algorithm for the placement was developed and implemented mainly by Martin Strasser during his doctoral thesis and by Michael Eick during his diploma thesis. The main idea behind it is, that circuits typically have a certain hierarchy. For example a operation amplifier consists of a differential amplifier, a current mirror and an output amplifier. Usually it is a good idea to place the modules of the same group not that far away, because they belong together in the logic behind the circuit. This is also the typical way a designer creates a layout out of a circuit manually, he starts with a certain functionality and places the modules for this function together. If the modules are grouped together in the layout they do not see that large differences in for example the temperature of the substrate, which will result in a better performance of the circuit.
+The algorithm for the placement was developed and implemented mainly by Martin Strasser during his doctoral thesis and by Michael Eick during his diploma thesis. The main idea behind it is, that circuits typically have a certain hierarchy. For example a operation amplifier consists of a differential amplifier, a current mirror and an output amplifier. Usually it is a good idea to place the modules of the same group not that far away, because they belong together in the logic behind the circuit. This is also the typical way a designer creates a layout out of a circuit manually, he starts with a certain functionality and places the modules for this function together. If the modules are grouped together in the layout [\ref{fig:miller_amplifier_layout}] they do not see that large differences in for example the temperature of the substrate, which will result in a better performance of the circuit.
 At the moment this information about the groups must be fed in by the user, but the target for the future would be, that even this step can be automized by for example a circuit analysis. This information can then be used to find the best placements for these groups, which are then combined on the next level in the hierarchy.
 
 PICTURE MISSING CIRCUIT
 
-PICTURE MISSING PLACEMENT
+\begin{figure}
+	\centering
+	\includegraphics[scale=0.4]{FIG/miller_amplifier_layout.png}
+	\caption{possible layout for a miller amplifier}
+	\label{fig:miller_amplifier_layout}
+\end{figure}
 
 Additionally it is possible to define certain constraints for modules and groups of modules:
 \begin{itemize}
