added picture for alignment constraint

--- a/definitions.tex
+++ b/definitions.tex
@@ -49,29 +49,23 @@ Symmetry constraints define a vertical or horizontal symmetry axis for modules. 
 \end{figure}
 
 \subsection{Alignment Constraint}
-An alignment constraints defines relative positions between modules, vertical or horizontal. In the terminology of plantage you allways have a A- and B-module. In the case of a horizontal alignment the A-module is placed left of the B-module, in the other case of a vertical alignment the A-module is placed below of the B-module. Additionally it is possible to define a minimum distance between the modules.
+An alignment constraint defines a relative positions between modules, vertical or horizontal [\ref{fig:constraint_alignment}]. In the terminology of plantage you allways have a A- and B-module. In the case of a horizontal alignment the A-module is placed left of the B-module, in the other case of a vertical alignment the A-module is placed below of the B-module. Additionally it is possible to define a minimum distance between the modules.
 
 \begin{figure}
 	\centering
-	\input{FIG/constraint_aligment.svg}
+	\input{FIG/constraint_alignment.svg}
 	\caption{horizontal alignment constraint}
-	\label{fig:constraint_aligment}
+	\label{fig:constraint_alignment}
 \end{figure}
 
 \subsection{Group Symmetry Constraint}
 The group symmetry constraint is nearly the same like the symmetry constraint. The only difference is, that it can be applied to groups instead of modules. Again we can have single groups, which are self symmetric placed, or pair groups, which are pairwise symmetric to the symmetry axis.
 
-PICTURE MISSING GROUP SYMMETRY CONSTRAINT
-
 \subsection{Group Alignment Constraint}
 Again the group alignment constraint is nearly the same like the alignment constraint with the only difference, that it can be applied to groups.
 
-PICTURE MISSING GROUP ALIGNMENT CONSTRAINT
-
 \subsection{Same Variants Constraint}
 The same variants constraint is again very important to for example given differential pairs. To get as far as possible same characterisitics in one placement these modules should have the same variants. They can still have various different variants, but in one certain placement for these modules the same variant is selected.
-
-PICTURE MISSING SAME VARIANTS CONSTRAINT
 
 \section{Technology Rules}
 Typically the manufacturer of the chip provides a so called \textit{tech-file} for the circuit designer, which he can use to create the layout. This information includes for example the minimum distances between two modules. As the knowledge of the manufacturers is very important to them the technology-files are kept secret, and therefore no real standard for them exists. The following descriptions are based on a technology file from Austria Microsystems, which was available for this project. We assume, that other possible formats can be transformed through the ICFBInterface into something similar. The rules were already extract through a skill script from cadence, but they were not stored or looped through to plantage. The technology rules can have four different types:
