added picture for minimum width rule

--- a/FIG/technology_rule_spacing.svg.tex
+++ b/FIG/technology_rule_spacing.svg.tex
@@ -1,4 +1,5 @@
 \setlength{\unitlength}{0.282222229121mm}
 \begin{picture}(400.0, 200.0)(0, -200.0)
   \put(0,-200.0){\includegraphics[height=56.4444458242mm, width=112.888891648mm]{FIG/technology_rule_spacing.svg.pdf}}
+  \put(176.0,-94.0){\makebox(0,0)[l]{\smash{minimum spacing}}}
 \end{picture}
