--- a/definitions.tex
+++ b/definitions.tex
@@ -79,7 +79,7 @@ Typically the manufacturer of the chip provides a so called \textit{tech-file} f
 
 The first two rules, considering minimum width and spaces, have one value, the actual minimum width or distance, and the layer, which they should be applied on. The last two types have also a value, but additionally two layers, on which they must be considered. All the rules must be applied to the placement and the routes. As the width, spacing and enclosure rules are the important ones for routing I will concentrate on those three.
 
-The minimum spacing rule is quite easy to understand, it only describes a minimal distance between two shapes on a certain layer. These rules may not be considered if deep trench isolated transistors are concerned, but this doesn't affect the routing. Deep trench isolated transistors result only in a possible bigger, combined, forbidden area for routes.
+The minimum spacing rule [\ref{fig:technology_rule_spacing}] is quite easy to understand, it only describes a minimal distance between two shapes on a certain layer. These rules may not be considered if deep trench isolated transistors are concerned, but this doesn't affect the routing. Deep trench isolated transistors result only in a possible bigger, combined, forbidden area for routes.
 
 \begin{figure}
 	\centering
@@ -88,16 +88,21 @@ The minimum spacing rule is quite easy to understand, it only describes a minima
 	\label{fig:technology_rule_spacing}
 \end{figure}
 
-PICTURE MISSING MINIMUM WIDTH
+Minimum widths are very central technology rules for the routing [\ref{fig:technology_rule_width}]. These values are used as width for the routes and can be different for every layer.
 
-Minimum widths are very central technology rules for the routing. These values are used as width for the routes and can be different for every layer.
-
-PICTURE MISSING MINIMUM ENCLOSURE
+\begin{figure}
+	\centering
+	\input{FIG/technology_rule_width.svg}
+	\caption{minimum width rule}
+	\label{fig:technology_rule_width}
+\end{figure}
 
 The minimum enclosure rules describe minimum distances, which need to be met between shapes on different layers. Typically in a technology file we only have minimum enclosure rules, where one of the considered layers is a via layer. A via layer is during manufacturing an additional layer, in which the connections between the different layers are created. For the routing these rules result in the dimensions of the vias on the layers, which are connected.
 
-PICTURE MISSING VIA DIMENSIONS
+PICTURE MISSING MINIMUM ENCLOSURE
 
 Every via definition must have two minimum enclosure rules, one for every layer, which is connected through the via. Additionally we need on minimum width rule for the via layer, which describes the width of the acutal connection. From these three rules we then can calculate the dimensions of the via, which typically differ for the two layers.
 
 \[\text{via dimension} = 2 \cdot \text{minimun enclosure} + \text{minimum via width}\]
+
+PICTURE MISSING VIA DIMENSIONS
