--- a/thesis.tex
+++ b/thesis.tex
@@ -30,6 +30,8 @@
 %  type setting correction for binding = 5mm
 \KOMAoptions{BCOR=5mm}
 
+\newcommand{\nref}[1]{{[\ref{#1}]}}
+
 \begin{document}
 \authors{Benedikt Schmidt}
 \title{Implementation of Routing in Plantage}
